; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_prune_notes.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_prune_notes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notes_tree = type { i32 }
%struct.note_delete_list = type { %struct.note_delete_list*, i32 }

@default_notes_tree = common dso_local global %struct.notes_tree zeroinitializer, align 4
@prune_notes_helper = common dso_local global i32 0, align 4
@NOTES_PRUNE_VERBOSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@NOTES_PRUNE_DRYRUN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prune_notes(%struct.notes_tree* %0, i32 %1) #0 {
  %3 = alloca %struct.notes_tree*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.note_delete_list*, align 8
  store %struct.notes_tree* %0, %struct.notes_tree** %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.note_delete_list* null, %struct.note_delete_list** %5, align 8
  %6 = load %struct.notes_tree*, %struct.notes_tree** %3, align 8
  %7 = icmp ne %struct.notes_tree* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store %struct.notes_tree* @default_notes_tree, %struct.notes_tree** %3, align 8
  br label %9

9:                                                ; preds = %8, %2
  %10 = load %struct.notes_tree*, %struct.notes_tree** %3, align 8
  %11 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.notes_tree*, %struct.notes_tree** %3, align 8
  %15 = load i32, i32* @prune_notes_helper, align 4
  %16 = call i32 @for_each_note(%struct.notes_tree* %14, i32 0, i32 %15, %struct.note_delete_list** %5)
  br label %17

17:                                               ; preds = %42, %9
  %18 = load %struct.note_delete_list*, %struct.note_delete_list** %5, align 8
  %19 = icmp ne %struct.note_delete_list* %18, null
  br i1 %19, label %20, label %46

20:                                               ; preds = %17
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @NOTES_PRUNE_VERBOSE, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load %struct.note_delete_list*, %struct.note_delete_list** %5, align 8
  %27 = getelementptr inbounds %struct.note_delete_list, %struct.note_delete_list* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i8* @hash_to_hex(i32 %28)
  %30 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %29)
  br label %31

31:                                               ; preds = %25, %20
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @NOTES_PRUNE_DRYRUN, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %42, label %36

36:                                               ; preds = %31
  %37 = load %struct.notes_tree*, %struct.notes_tree** %3, align 8
  %38 = load %struct.note_delete_list*, %struct.note_delete_list** %5, align 8
  %39 = getelementptr inbounds %struct.note_delete_list, %struct.note_delete_list* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @remove_note(%struct.notes_tree* %37, i32 %40)
  br label %42

42:                                               ; preds = %36, %31
  %43 = load %struct.note_delete_list*, %struct.note_delete_list** %5, align 8
  %44 = getelementptr inbounds %struct.note_delete_list, %struct.note_delete_list* %43, i32 0, i32 0
  %45 = load %struct.note_delete_list*, %struct.note_delete_list** %44, align 8
  store %struct.note_delete_list* %45, %struct.note_delete_list** %5, align 8
  br label %17

46:                                               ; preds = %17
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @for_each_note(%struct.notes_tree*, i32, i32, %struct.note_delete_list**) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @hash_to_hex(i32) #1

declare dso_local i32 @remove_note(%struct.notes_tree*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
